--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 		<!-- Carousel fin -->
 
 		<div class="mix col-md-6 col-lg-3 illustration all">
-			<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/jungle/jungle_1.jpg">
+			<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/jungle/jungle.jpg">
 				<div class="pi-inner" data-toggle="modal" data-target="#modal24">
 					<h2>JUNGLE</h2>
 				</div>
@@ -749,7 +749,7 @@
 			<div class="mix col-md-6 col-lg-3 photography all">
 				<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/calme_de_la_provence/calme_de_la_provence_1.jpg">
 					<div class="pi-inner" data-toggle="modal" data-target="#modal8">
-						<h2>CALME DE LA PROVENCE</h2>
+						<h2>CALME <br> DE LA PROVENCE</h2>
 					</div>
 				</a>
 				<div class="portfolio-meta">
@@ -792,55 +792,55 @@
 			</div>
 		<!-- Carousel fin -->
 
-				<div class="mix col-md-6 col-lg-3 photography all">
-					<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_1.jpg">
-						<div class="pi-inner" data-toggle="modal" data-target="#modal">
-							<h2>CAP BLANC-NEZ SUNSET</h2>
-						</div>
-					</a>
-					<div class="portfolio-meta">
-						<h2>CAP BLANC-NEZ SUNSET</h2>
-						<p>(3)</p>
-					</div>
+		<div class="mix col-md-6 col-lg-3 photography all">
+			<a class="portfolio-item pi-style2 set-bg" data-setbg="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_1.jpg">
+				<div class="pi-inner" data-toggle="modal" data-target="#modal4">
+					<h2>CALME <br> DE LA PROVENCE</h2>
 				</div>
+			</a>
+			<div class="portfolio-meta">
+				<h2>CALME DE LA PROVENCE</h2>
+				<p>(2)</p>
+			</div>
+		</div>
 
-				<!-- Carousel -->
-				<div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content" >
-							<!-- <div class="modal-body"> -->
-								<div id="carouselExampleControls4" class="carousel slide" data-ride="carousel">
-									<div class="carousel-inner">
+		<!-- Carousel -->
+		<div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content" >
+					<!-- <div class="modal-body"> -->
+						<div id="carouselExampleControls8" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
 
-										<div class="carousel-item active">
-											<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_1.jpg" alt="First slide">
-										</div>
-
-										<div class="carousel-item">
-											<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_2.jpg" alt="Second slide">
-										</div>
-
-										<div class="carousel-item">
-											<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_2.jpg" alt="Third slide">
-										</div>
-
-									<!-- -->
-									</div>
-									<!-- -->
-
-									<a class="carousel-control-prev" href="#carouselExampleControls4" role="button" data-slide="prev">
-										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Previous</span>
-									</a>
-									<a class="carousel-control-next" href="#carouselExampleControls4" role="button" data-slide="next">
-										<span class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Next</span>
-									</a>
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_1.jpg" alt="First slide">
 								</div>
+
+								<div class="carousel-item">
+									<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_2.jpg" alt="Second slide">
+								</div>
+
+								<div class="carousel-item">
+									<img class="d-block w-100" src="img/portfolio/cap_blanc_nez_sunset/cap_blanc_nez_sunset_3.jpg" alt="Third slide">
+								</div>
+
+							<!-- -->
+							</div>
+							<!-- -->
+
+							<a class="carousel-control-prev" href="#carouselExampleControls8" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls8" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
 						</div>
-					</div>
 				</div>
-			<!-- Carousel fin -->
+			</div>
+		</div>
+	<!-- Carousel fin -->
 
 			</div>
 		</div>
